--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <h3>Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
     </section>
-      <h3>Мои достижения</h3>h3>
-      <img src = 'img/list-1.jpg'><img src = 'img/list-2.jpg'><img src = 'img/list-3.jpg'><img src = 'img/list-4.jpg'>
+      <h3>Мои достижения</h3>
+      <img src = 'img/list-1.jpg' width = '450' ><img src = 'img/list-2.jpg' width = '450' ><img src = 'img/list-3.jpg' width = '450' ><img src = 'img/list-4.jpg' width = '450'  >
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
 
