попытки исправить недоработки

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3>Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
       <h3>Мои достижения</h3>
-      <img src = 'img/list-1.jpg' width = '450' ><img src = 'img/list-2.jpg' width = '450' ><img src = 'img/list-3.jpg' width = '450' ><img src = 'img/list-4.jpg' width = '450'  >
+        <p><img src = 'img/list-1.jpg' width = '450' ><img src = 'img/list-2.jpg' width = '450' ><img src = 'img/list-3.jpg' width = '450' ><img src = 'img/list-4.jpg' width = '450'  ></p>
     <section class="portfolio">
     </section>
       
