--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="hero-image">
-      <h1 class="heading">Неопознанный Енот<img src = '/laptop-2.svg' width = '80'></h1>
+      <h1 class="heading">Неопознанный Енот<img src = 'laptop-2.svg' width = '80'></h1>
       <p>Junior верстальщик </p>
         
          
