--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class = 'my-photo'>
-  <img  src="files/user.jpg" width="928"  alt="Фотография Неопознанного Енота">
+  <img  src="user.jpg" width="928"  alt="Фотография Неопознанного Енота">
 </figure>
       <h3 >Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
@@ -43,7 +43,7 @@
       
       <h2 class="subheading">Мои работы</h2>
       <figure class="project-image">
-  <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+  <img src="project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
 </figure>
 
       <h3>Сайт инструктора Кекса</h3>
