добавление сайта Кекса

--- a/source/index.html
+++ b/source/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Инструктор Кексоне</title>
-    <link rel="stylesheet" href="style-keks.css">
+    <link rel="stylesheet" href="source/style-keks.css">
   </head>
   <body>
     <div class="container">
       <header class="site-header">
         <h1>Инструктор Кексоне</h1>
         <p>Обучение начинающих котят</p>
-        <img src="banner-2.png">
+        <img src="img/banner-2.png">
       </header>
 
       <section class="features">
