--- a/source/index.html
+++ b/source/index.html
@@ -2,15 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Инструктор Кексоне</title>
-    <link rel="stylesheet" href="source/style-keks.css">
+    <title>Инструктор Кекс</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
       <header class="site-header">
-        <h1>Инструктор Кексоне</h1>
+        <h1>Инструктор Кекс</h1>
         <p>Обучение начинающих котят</p>
-        <img src="img/banner-2.png">
+        <img src="img/keks.png">
       </header>
 
       <section class="features">
