--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
-       <a class="button" href='https://mashkakra.github.io/blog/'>Открыть страницу</a>
+       <a class="button" href='https://mashkakra.github.io/my-blog/'>Открыть страницу</a>
 
     </section>
 
