--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
       <p>Текст о том, чем могу быть полезен.</p>
       <h3 >Мои достижения</h3>
         <p><img src = 'list-1.jpg' width = '450' ><img src = 'list-2.jpg' width = '450' ><img src = 'list-3.jpg' width = '450' ><img src = 'list-4.jpg' width = '450'  ></p>
+        <div class = 'skills'><h3>Мои навыки</h3>
+         <dl class="skills-list">
+    <dt class="skill-html">HTML</dt>
+    <dd class="level"><div style="width: 60%;">60%</div></dd>
+    <dt class="skill-css">CSS</dt>
+    <dd class="level"><div style="width: 40%;">40%</div></dd>
+  </dl>
     <section class="portfolio">
+    
     </section>
       
       <h2 class="subheading">Мои работы</h2>
