добавляет темную тему

--- a/files/index.html
+++ b/files/index.html
@@ -9,7 +9,9 @@
 
   <body>
     <header class="page-header">
+   
      <div class = 'container'>
+          <a class = 'button' href = 'source/basic-dark-theme/index(1).html'>Тёмная тема</a><br>
      Контакты в шапке:<br>
     <a href="mailto:kom0d@mail.ru" class = 'header-email'>kom0d@mail.ru</a>
     <a href="tel:+79013890853" class = 'header-phone'>+7 901 389 08 53</a>
