--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h3 >Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
       <h3 >Мои достижения</h3>
-        <p><img src = 'source/list-1.jpg' width = '450' ><img src = 'list-2.jpg' width = '450' ><img src = 'source/list-3.jpg' width = '450' ><img src = 'list-4.jpg' width = '450'  ></p>
+        <p><img src = 'source/list-1.jpg' width = '450' ><img src = 'source/list-2.jpg' width = '450' ><img src = 'source/list-3.jpg' width = '450' ><img src = 'source/list-4.jpg' width = '450'  ></p>
         <div class = 'skills'><h3>Мои навыки</h3>
          <dl class="skills-list">
     <dt class="skill-html">HTML</dt>
