подключение темной темы

--- a/files/index.html
+++ b/files/index.html
@@ -11,7 +11,7 @@
     <header class="page-header">
    
      <div class = 'container'>
-          <a class = 'button' href = 'source/basic-dark-theme/index(1).html'>Тёмная тема</a><br>
+          <a class = 'button' href = 'index(1).html'>Тёмная тема</a><br>
      Контакты в шапке:<br>
     <a href="mailto:kom0d@mail.ru" class = 'header-email'>kom0d@mail.ru</a>
     <a href="tel:+79013890853" class = 'header-phone'>+7 901 389 08 53</a>
@@ -39,7 +39,7 @@
       <h3 >Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
       <h3 >Мои достижения</h3>
-        <p><img src = 'source/list-1.jpg' width = '450' ><img src = 'list-2.jpg' width = '450' ><img src = 'source/list-3.jpg' width = '450' ><img src = 'list-4.jpg' width = '450'  ></p>
+        <p><img src = 'source/list-1.jpg' width = '450' ><img src = 'source/list-2.jpg' width = '450' ><img src = 'source/list-3.jpg' width = '450' ><img src = 'source/list-4.jpg' width = '450'  ></p>
         <div class = 'skills'><h3>Мои навыки</h3>
          <dl class="skills-list">
     <dt class="skill-html">HTML</dt>
